==> conservationtechlab/tinyscrubcam/googleCoralBuild/googleCoral/coralmicro/third_party/nxp/rt1176-sdk/middleware/wiced/43xxx_Wi-Fi/WICED/platform/MCU/LPC18xx/peripherals/platform_gpio.c <==
#include "string.h"
#include "platform_peripheral.h"
#include "chip.h"
#include "wwd_assert.h"
#include "wwd_rtos_isr.h"

platform_result_t platform_gpio_init( const platform_gpio_t* gpio, platform_pin_config_t config )
{
    uint16_t mode;
    uint8_t  direction;

    switch(config)
    {
        case INPUT_PULL_UP:
        {
            mode = SCU_MODE_PULLUP;
            direction =LPC_PIN_INPUT;
            break;
        }
        case INPUT_PULL_DOWN:
        {
            mode = SCU_MODE_PULLDOWN;
            direction =LPC_PIN_INPUT;
            break;
        }
        case INPUT_HIGH_IMPEDANCE:
        {
            mode = SCU_MODE_INACT;
            direction =LPC_PIN_INPUT;
            break;
        }
        case OUTPUT_PUSH_PULL:
        {
            mode = SCU_MODE_INACT;
            direction =LPC_PIN_OUTPUT;
            break;
        }
        case OUTPUT_OPEN_DRAIN_NO_PULL:
        {
            mode = SCU_MODE_INACT;
            direction =LPC_PIN_OUTPUT;
            break;
        }
        case OUTPUT_OPEN_DRAIN_PULL_UP:
        {
            mode = SCU_MODE_PULLUP;
            direction =LPC_PIN_OUTPUT;
            break;
        }
        default:
        {
            return PLATFORM_UNSUPPORTED;
        }
    }
    Chip_SCU_PinMux( gpio->hw_pin.group, gpio->hw_pin.pin, mode, gpio->hw_pin.mode_function );
    Chip_GPIO_SetPinDIR( LPC_GPIO_PORT, gpio->gpio_port, gpio->gpio_pin, direction );
    return PLATFORM_SUCCESS;
}

platform_result_t platform_gpio_output_high( const platform_gpio_t* gpio)
{
    Chip_GPIO_SetPinState(LPC_GPIO_PORT, gpio->gpio_port, gpio->gpio_pin, 1);
    return PLATFORM_SUCCESS;
}

platform_result_t platform_gpio_output_low( const platform_gpio_t* gpio)
{
    Chip_GPIO_SetPinState(LPC_GPIO_PORT, gpio->gpio_port, gpio->gpio_pin, 0);
    return PLATFORM_SUCCESS;
}

platform_result_t platform_gpio_irq_enable( const platform_gpio_t* gpio, platform_gpio_irq_trigger_t trigger, platform_gpio_irq_handler_t handler, void* arg )
{
    IRQn_Type IRQn;
    int8_t irq_number = platform_gpio_irq_get_next_unused( );

    if ( irq_number >= 0 )
    {
        gpio_irq_data[ irq_number ].handler = handler;
        gpio_irq_data[ irq_number ].arg = arg;
        gpio_irq_data[ irq_number ].trigger = trigger;
        gpio_irq_data[ irq_number ].gpio = *gpio;

        Chip_SCU_PinMuxSet( gpio->hw_pin.group, gpio->hw_pin.pin, ( SCU_MODE_INBUFF_EN | SCU_MODE_INACT | gpio->hw_pin.mode_function ) );
        /* Configure GPIO pin as input */
        Chip_GPIO_SetPinDIRInput( LPC_GPIO_PORT, gpio->gpio_port, gpio->gpio_pin );
        Chip_SCU_GPIOIntPinSel( irq_number, gpio->gpio_port, gpio->gpio_pin );
        Chip_PININT_SetPinModeEdge( LPC_GPIO_PIN_INT, PININTCH(irq_number) );
        Chip_PININT_ClearIntStatus( LPC_GPIO_PIN_INT, PININTCH(irq_number) );
        switch ( trigger )
        {
            case IRQ_TRIGGER_RISING_EDGE:
                Chip_PININT_EnableIntHigh( LPC_GPIO_PIN_INT, PININTCH(irq_number) );
                break;
            case IRQ_TRIGGER_FALLING_EDGE:
                Chip_PININT_EnableIntLow( LPC_GPIO_PIN_INT, PININTCH(irq_number) );
                break;
            default:
                //wiced_assert( "Unsupported Trigger", trigger == IRQ_TRIGGER_BOTH_EDGES);
                Chip_PININT_SetPinModeEdge( LPC_GPIO_PIN_INT, PININTCH(irq_number) );
        }

        switch ( irq_number )
        {
            case 0:
                IRQn = PIN_INT0_IRQn;
                break;
            case 1:
                IRQn = PIN_INT1_IRQn;
                break;
            case 2:
                IRQn = PIN_INT2_IRQn;
                break;
            case 3:
                IRQn = PIN_INT3_IRQn;
                break;
            case 4:
                IRQn = PIN_INT4_IRQn;
                break;
            case 5:
                IRQn = PIN_INT5_IRQn;
                break;
            case 6:
                IRQn = PIN_INT6_IRQn;
                break;
            case 7:
                IRQn = PIN_INT7_IRQn;
                break;
            default:
                break;
        }
        NVIC_DisableIRQ( IRQn );
        NVIC_ClearPendingIRQ( IRQn );
        NVIC_SetPriority( IRQn, 0xE );
        NVIC_EnableIRQ(IRQn );


        return PLATFORM_SUCCESS;
    }

    return PLATFORM_NO_EFFECT;
}

platform_result_t platform_gpio_irq_disable( const platform_gpio_t* gpio )
{
    uint8_t irq_number;
    IRQn_Type IRQn;

    for ( irq_number = 0; irq_number < NUMBER_OF_GPIO_IRQ_LINES; irq_number++ )
    {
        if ( ( gpio_irq_data[ irq_number ].gpio.gpio_port == gpio->gpio_port ) &&
             ( gpio_irq_data[ irq_number ].gpio.gpio_pin == gpio->gpio_pin )
           )
        {
            switch ( irq_number )
            {
                case 0:
                    IRQn = PIN_INT0_IRQn;
                    break;
                case 1:
                    IRQn = PIN_INT1_IRQn;
                    break;
                case 2:
                    IRQn = PIN_INT2_IRQn;
                    break;
                case 3:
                    IRQn = PIN_INT3_IRQn;
                    break;
                case 4:
                    IRQn = PIN_INT4_IRQn;
                    break;
                case 5:
                    IRQn = PIN_INT5_IRQn;
                    break;
                case 6:
                    IRQn = PIN_INT6_IRQn;
                    break;
                case 7:
                    IRQn = PIN_INT7_IRQn;
                    break;
                default:
                    break;
            }
            NVIC_DisableIRQ( IRQn );

            switch ( gpio_irq_data[ irq_number ].trigger )
            {
                case IRQ_TRIGGER_RISING_EDGE:
                    Chip_PININT_DisableIntHigh( LPC_GPIO_PIN_INT, PININTCH(irq_number) );
                    break;
                case IRQ_TRIGGER_FALLING_EDGE:
                    Chip_PININT_DisableIntLow( LPC_GPIO_PIN_INT, PININTCH(irq_number) );
                    break;
                default:
                    wiced_assert( "Unsupported Trigger", gpio_irq_data[ irq_number ].trigger == IRQ_TRIGGER_BOTH_EDGES);
            }
            gpio_irq_data[ irq_number ].handler  = 0;
            gpio_irq_data[ irq_number ].arg      = 0;
            gpio_irq_data[ irq_number ].trigger  = 0;

            return PLATFORM_SUCCESS;
        }
    }
    return PLATFORM_NO_EFFECT;
}
